--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@
 # Focuses on the master branch only
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 # Create one single job
 # This job performs all necessary checks
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         # Performs all actions on different versions of Python
-        python-version: ["3.10"]
+        python-version: ["3.11"]
     # Define the workflow steps
     steps:
     # Checkout the code of the repository
